Fix vertical alignment at 319px breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ main {
 
 /* Center vertically when viewport height exceeds calculator height */
 @media screen and (min-height: 700px),
-  screen and (max-width: 319px) and (min-height: 550px),
+  screen and (max-width: 319px) and (min-height: 560px),
   screen and (max-width: 369px) and (min-height: 650px) {
   main {
     height: 100vh;
